--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Humble Bakester </title>
+<title>Popcorn Plaza </title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Savor artisan coffee and live music in the tranquil ambiance Humble Bakester, your local getaway.">
