--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
     </main>
 </div>
 <footer>
-  Copyright &copy; 2024 Humble Bakester <br>
+  Copyright &copy; 2024 Popcorn Plaza <br>
   Follow us <a
   href="https://github.com/PromesseFongba/Promesse-SeuglongFongba-Haumea-gitbasics"
   class="fa fa-github fa-2x"></a>
